--- a/nest-kpop-frontend/package.json
+++ b/nest-kpop-frontend/package.json
@@ -22,6 +22,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "spotify-preview-finder": "^2.1.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.8"
   },
