--- a/nest-kpop-frontend/package.json
+++ b/nest-kpop-frontend/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@types/react-window": "^1.8.8",
     "@types/spotify-web-playback-sdk": "^0.1.19",
     "axios": "^1.12.0",
     "class-variance-authority": "^0.7.1",
@@ -22,6 +23,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-window": "^2.2.0",
     "spotify-preview-finder": "^2.1.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.8"
